Remove dead link.

--- a/BappDescription.html
+++ b/BappDescription.html
@@ -2,8 +2,8 @@
 
 <ul>
     <li>Extracts and displays token information based on the decompressed data</li>
-    <il>Generates the Hashcat format - to perform brute-force/dictionary attacks in order to obtain the local node password</il>
+    <li>Generates the Hashcat format - to perform brute-force/dictionary attacks in order to obtain the local node password</li>
     <li>Generates a new PSTOKEN value that can be used in order to authenticate as another user (requires knowledge of the local node password)</li>
 </ul>
 
-<p>This is a re-implementation of the <a href="https://erpscan.com/press-center/blog/peoplesoft-security-part-4-peoplesoft-pentest-using-tokenchpoken-tool/">TokenChpoken</a> Tool developed by ERPScan.</p>
+<p>This is a re-implementation of the TokenChpoken (https://erpscan.com/press-center/blog/peoplesoft-security-part-4-peoplesoft-pentest-using-tokenchpoken-tool/ - link is down) Tool developed by ERPScan.</p>
